--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,25 +2,23 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: service-flask
-  description: Componente de prueba
+  name: integrationprocesscontrolnumbers
+  description: Microservicios para la pantalla Cifras Control Históricas de DO IMSS/Microservicios para la gestión de los indicadores configurados por cuenta individual.
   tags:
-    - service-flask
-  annotations:
-    github.com/project-slug: JCAL0199/serviceflask
-    backstage.io/ci-cd: github-actions
-    backstage.io/techdocs-ref: dir:.
-    service-flask/version: "1.0.3"
-    service-flask/deployed-at: "2025-06-28T14:00Z"
-    service-flask/git-commit: "abc123"
+    - microservice
+    - reporting
   links:
-    - url: https://github.com/JCAL0199/serviceflask
-      title: Repositorio GitHub
-      icon: github
+    - url: https://github.com/JCAL0199/Integrationprocesscontrolnumbers
+      title: Repository
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+    endpoints/dev: https://api.dev.company1.mx/company/1/nci-bdnsardintegrationprocesscontrolnumbers
+    endpoints/qa: https://api.qa.company1.mx/company/1/nci-bdnsardintegrationprocesscontrolnumbers
+    endpoints/prod: https://api.company1.mx/company/1/nci-bdnsardintegrationprocesscontrolnumbers
 spec:
   type: service
-  lifecycle: experimental
-  owner: group:default/developers
+  owner: group:default/juan-manuel-perez
+  lifecycle: production
   system: bdnsar
 ---
 apiVersion: backstage.io/v1alpha1
