--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -24,38 +24,12 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: dispersion-ordinaria-imss
-  description: Dispersión Ordinaria IMSS
+  name: uso-de-garantia-por-43-bis
+  description: Uso de Garantía por 43 BIS
   tags:
     - proceso-negocio
 spec:
   type: negocio
   lifecycle: experimental
   owner: group:default/developers
-  subcomponentOf: component:default/service-flask
----
-apiVersion: backstage.io/v1alpha1
-kind: Component
-metadata:
-  name: carga-archivo
-  description: Dispersión Ordinaria IMSS/Carga Archivo -Edición
-  tags:
-    - sub-etapa
-spec:
-  type: subetapa
-  lifecycle: experimental
-  owner: group:default/developers
-  subcomponentOf: component:default/dispersion-ordinaria-imss
----
-apiVersion: backstage.io/v1alpha1
-kind: Component
-metadata:
-  name: idc
-  description: Dispersión Ordinaria IMSS/IDC
-  tags:
-    - sub-etapa
-spec:
-  type: subetapa
-  lifecycle: experimental
-  owner: group:default/developers
-  subcomponentOf: component:default/dispersion-ordinaria-imss
+  subcomponentOf: component:default/integrationprocesscontrolnumbers
